--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -39,7 +49,7 @@ body {
 }
 
 .activeProject {
-    transition: 2s ease;
+    animation: .5s fadeIn;
     background-color: black;
     color: white;
 }
@@ -83,7 +93,7 @@ body {
 .list-container {
     width: 100%;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -126,17 +136,6 @@ body {
     align-items: center;
     margin-bottom: 10px;
 }
-
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
 
 .taskFade {
     animation: .5s fadeIn;
