--- a/src/style.css
+++ b/src/style.css
@@ -10,12 +10,15 @@
 
 html {
     background-color: rgba(36, 36, 36, 0.788);
+    padding: 0;
+    margin: 0;
 }
 
 body {
     display: flex;
     flex-direction: column;
     font-family: sans-serif;
+    margin: 0;
 }
 
 .title {
@@ -165,7 +168,7 @@ button:hover {
     background-color: rgba(0, 0, 0, 0);
     box-shadow: inset 0px 0px 0px 0px red;
     border-bottom: 1px solid rgb(201, 201, 201);
-    color: white;   
+    color: white;
     inset: none;
 }
 
